; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/renderer/extr_tr_init.c_RE_Shutdown.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/renderer/extr_tr_init.c_RE_Shutdown.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 (i8*)*, i32 (i32, i8*, i64)* }
%struct.TYPE_3__ = type { i64 }

@ri = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@PRINT_ALL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [19 x i8] c"RE_Shutdown( %i )\0A\00", align 1
@.str.1 = private unnamed_addr constant [10 x i8] c"modellist\00", align 1
@.str.2 = private unnamed_addr constant [15 x i8] c"screenshotJPEG\00", align 1
@.str.3 = private unnamed_addr constant [11 x i8] c"screenshot\00", align 1
@.str.4 = private unnamed_addr constant [10 x i8] c"imagelist\00", align 1
@.str.5 = private unnamed_addr constant [11 x i8] c"shaderlist\00", align 1
@.str.6 = private unnamed_addr constant [9 x i8] c"skinlist\00", align 1
@.str.7 = private unnamed_addr constant [8 x i8] c"gfxinfo\00", align 1
@.str.8 = private unnamed_addr constant [9 x i8] c"modelist\00", align 1
@.str.9 = private unnamed_addr constant [12 x i8] c"shaderstate\00", align 1
@tr = common dso_local global %struct.TYPE_3__ zeroinitializer, align 8
@qfalse = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @RE_Shutdown(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i32 (i32, i8*, i64)*, i32 (i32, i8*, i64)** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @ri, i32 0, i32 1), align 8
  %4 = load i32, i32* @PRINT_ALL, align 4
  %5 = load i64, i64* %2, align 8
  %6 = call i32 %3(i32 %4, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), i64 %5)
  %7 = load i32 (i8*)*, i32 (i8*)** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @ri, i32 0, i32 0), align 8
  %8 = call i32 %7(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0))
  %9 = load i32 (i8*)*, i32 (i8*)** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @ri, i32 0, i32 0), align 8
  %10 = call i32 %9(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.2, i64 0, i64 0))
  %11 = load i32 (i8*)*, i32 (i8*)** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @ri, i32 0, i32 0), align 8
  %12 = call i32 %11(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.3, i64 0, i64 0))
  %13 = load i32 (i8*)*, i32 (i8*)** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @ri, i32 0, i32 0), align 8
  %14 = call i32 %13(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.4, i64 0, i64 0))
  %15 = load i32 (i8*)*, i32 (i8*)** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @ri, i32 0, i32 0), align 8
  %16 = call i32 %15(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.5, i64 0, i64 0))
  %17 = load i32 (i8*)*, i32 (i8*)** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @ri, i32 0, i32 0), align 8
  %18 = call i32 %17(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.6, i64 0, i64 0))
  %19 = load i32 (i8*)*, i32 (i8*)** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @ri, i32 0, i32 0), align 8
  %20 = call i32 %19(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.7, i64 0, i64 0))
  %21 = load i32 (i8*)*, i32 (i8*)** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @ri, i32 0, i32 0), align 8
  %22 = call i32 %21(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.8, i64 0, i64 0))
  %23 = load i32 (i8*)*, i32 (i8*)** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @ri, i32 0, i32 0), align 8
  %24 = call i32 %23(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.9, i64 0, i64 0))
  %25 = load i64, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @tr, i32 0, i32 0), align 8
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %31

27:                                               ; preds = %1
  %28 = call i32 (...) @R_SyncRenderThread()
  %29 = call i32 (...) @R_ShutdownCommandBuffers()
  %30 = call i32 (...) @R_DeleteTextures()
  br label %31

31:                                               ; preds = %27, %1
  %32 = call i32 (...) @R_DoneFreeType()
  %33 = load i64, i64* %2, align 8
  %34 = icmp ne i64 %33, 0
  br i1 %34, label %35, label %37

35:                                               ; preds = %31
  %36 = call i32 (...) @GLimp_Shutdown()
  br label %37

37:                                               ; preds = %35, %31
  %38 = load i64, i64* @qfalse, align 8
  store i64 %38, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @tr, i32 0, i32 0), align 8
  ret void
}

declare dso_local i32 @R_SyncRenderThread(...) #1

declare dso_local i32 @R_ShutdownCommandBuffers(...) #1

declare dso_local i32 @R_DeleteTextures(...) #1

declare dso_local i32 @R_DoneFreeType(...) #1

declare dso_local i32 @GLimp_Shutdown(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
